--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.0/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="dist/QuizApp.min.js"></script>
+    <script src="dist/QuizApp.js"></script>
   </body>
 </html>
